--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git tutorials</title>
-    <style src="bluestyle.css"></style>
-</head>
-<body>
-    <h1>git tutorial </h1>
-    <div><img src="img_hello_world.jpg" alt="Hello World from Space"
-        style="width:100%;max-width:390px;"></div>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <title>Git status</title>
+  </head>
+  <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="img_hello_world.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            GitTutes
+          </a>
+        </div>
+      </nav>
+      <h1>Git Tutorials</h1>
     <div class="container">
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto a unde repellendus deleniti corporis voluptatibus saepe fuga ipsum aliquid, corrupti eaque recusandae voluptatem! Repellat illo ab hic! Nam obcaecati aut, autem expedita at natus odio quia saepe fuga. Sequi incidunt animi nam dolorum hic aperiam quod eum tempore omnis et perferendis accusantium sapiente optio soluta asperiores facilis tenetur, eos unde? Nesciunt illo sapiente exercitationem iste quae consectetur labore consequuntur obcaecati minima assumenda culpa maxime tempora corporis, quia possimus doloribus? Ratione maxime quam officia adipisci sapiente itaque harum, neque eveniet obcaecati architecto cum voluptas mollitia expedita dolorem! Quaerat pariatur placeat saepe tenetur ipsam adipisci, cumque, labore error nihil illo alias sequi maiores fuga unde? Veritatis consectetur at ipsa blanditiis quia nesciunt. Cumque vitae perferendis expedita natus a reiciendis. Impedit accusantium dolor nemo quaerat fugit laborum sed explicabo reiciendis numquam! Quas quis nostrum impedit dolorum! Iusto reiciendis ipsam sunt facilis illum. Aliquam esse dolores non. Nihil totam rerum aperiam impedit ducimus reiciendis illo. Enim deleniti aliquid, voluptates atque minus tempora error commodi voluptate vitae? Enim aspernatur illum dolores fugiat neque odio, necessitatibus, possimus hic explicabo natus mollitia voluptatibus magni illo corrupti earum ipsum debitis sint nam officiis beatae vero esse quia? Perspiciatis ipsam alias quo voluptatem consequatur recusandae. Doloremque explicabo sit quam obcaecati nisi debitis perferendis necessitatibus aut ipsa facilis quos animi ipsum aliquam tenetur delectus modi iure, illum voluptatem sed sint? Illo voluptas dolorem unde fuga quae ducimus rem perferendis, quos neque nesciunt ex placeat ipsum, aut distinctio minima, eligendi aliquid. Magni illum fugit,'</p>
-</div>
-</body>
+<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid similique dolorum fugit vero modi. Impedit a ipsum assumenda dolore quod alias! Sit numquam, adipisci excepturi non eum iure, labore accusantium dolorum mollitia quidem eveniet. Natus ipsa at, quis esse mollitia eaque asperiores vitae exercitationem rerum.</p>
+    </div>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    -->
+  </body>
 </html>
